# mithril

./: .dir-locals.el  .dockerignore  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  CNAME  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  DEV-ADR.md  Dockerfile  Makefile  NOTICE  README.md  RUN-CARDANO-BLOCKS-TRANSACTIONS.md  RUN-IVC-SNARK-TESTS.md  RUN-SNARK-TESTS.md  SECURITY.md  TEST_ONLY_genesis.vkey  avro-poc.md  bash.sh  cardano-min-versions.json  default.nix  default.profraw  deny.toml  epoch_grid.md  flake.nix  index.html  meetings.md  mithril-install.sh  multiple_beacon_observations.md  networks.json  openapi.yaml  package.yaml  rust-clippy-results.sarif  rustfmt.toml  shell.nix  stack.yaml
demo/protocol-demo/: .gitignore  Cargo.toml  Makefile  README.md  mithrildemo-command-line.md
examples/client-cardano-block/: .gitignore  Cargo.toml  README.md
examples/client-cardano-database-v2/: Cargo.toml  README.md
examples/client-cardano-stake-distribution/: .gitignore  Cargo.toml  README.md
examples/client-cardano-transaction/: .gitignore  Cargo.toml  README.md
examples/client-cardano-transaction-v2/: .gitignore  Cargo.toml  README.md
examples/client-mithril-stake-distribution/: .gitignore  Cargo.toml  README.md
examples/client-snapshot/: Cargo.toml  README.md
internal/mithril-aggregator-client/: Cargo.toml  README.md
internal/mithril-aggregator-discovery/: Cargo.toml  Makefile  README.md
internal/mithril-build-script/: Cargo.toml  README.md
internal/mithril-cli-helper/: Cargo.toml  README.md
internal/mithril-dmq-node/: Cargo.toml  README.md
mithril-aggregator/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  mithril-aggregator-command-line.md
mithril-aggregator/benches/: cardano_blocks_transactions_get.rs  cardano_blocks_transactions_import.rs  cardano_transactions_get.rs  cardano_transactions_import.rs
mithril-aggregator/config/: dev.json  preview.json  testnet.json
mithril-aggregator/src/: apispec.rs  beacon_provider.rs  beacon_store.rs  certificate_creator.rs  certifier_service.rs  command_args.rs  configuration.rs  dependency.rs  entities.rs  fake_data.rs  genesis_tools.rs  http_server.rs  immutable_file_digest_mapper.rs  lib.rs  main.rs  multi_signer.rs  runtime.rs  signed_entity_service.rs  signer_registerer.rs  signer_registration_verifier.rs  snapshot_store.rs  snapshotter.rs  stake_distribution_service.rs  ticker_service.rs
mithril-aggregator/tests/: cardano_stake_distribution_verify_stakes.rs  certificate_chain.rs  create_certificate.rs  create_certificate_follower.rs  create_certificate_slave.rs  create_certificate_with_buffered_signatures.rs  era_checker.rs  genesis_to_signing.rs  human_readable_protocol_configuration.json  leader_signed_entity_config_propagation.rs  open_message_expiration.rs  open_message_newer_exists.rs  prove_blocks_transactions.rs  prove_transactions.rs  runners.rs  signed_entity_support.rs  simple.rs
mithril-client/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md
mithril-client-cli/: Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  generated_doc.md  mithril-client-command-line.md
mithril-client-cli/config/: dev.json  preview.json
mithril-client-cli/src/: client.rs  command_context.rs  configuration.rs  http_client.rs  lib.rs  main.rs
mithril-client-wasm/: .gitignore  .vsls.json  Cargo.toml  Makefile  README.md  build.rs  package.json
mithril-client-wasm/ci-test/: .env.example  Makefile  README.md  index.html  index.js  package-lock.json  package.json
mithril-client-wasm/node-test/: index.js  package-lock.json  package.json
mithril-client-wasm/npm/: README.md
mithril-client-wasm/src/: certificate_verification_cache.rs  client_wasm.rs  lib.rs  test_data.rs
mithril-client-wasm/tests/: certificate_get_list.rs
mithril-client-wasm/www/: Makefile  bootstrap.js  index.html  index.js  package-lock.json  package.json  webpack.config.js
mithril-client-wasm/www-test/: Makefile  README.md  index.html  index.js  package-lock.json  package.json  webpack.config.js
mithril-client/config/: dev.json  preview.json  testnet.json
mithril-client/examples/: mithril_stake_distribution_list_get_verify.rs  snapshot_list_get_show_download_verify.rs
mithril-client/src/: aggregator.rs  aggregator_client.rs  aggregator_fake.rs  cardano_block_client.rs  cardano_database_client.rs  cardano_stake_distribution_client.rs  cardano_transaction_client.rs  cardano_transaction_proof.rs  cardano_transaction_proof_client.rs  cardano_transaction_v2_client.rs  certificate_client.rs  client.rs  client_builder.rs  client_wasm.rs  entities.rs  era.rs  era_fetcher.rs  feedback.rs  lib.rs  main.rs  message.rs  mithril_stake_distribution_client.rs  runtime.rs  snapshot_client.rs  snapshot_downloader.rs  type_alias.rs  verifier.rs
mithril-client/tests/: cardano_block_proof.rs  cardano_database_list_get_show_download_verify.rs  cardano_db_snapshot_list_get_download_verify.rs  cardano_transaction_proof.rs  cardano_transaction_v2_proof.rs  certificate_get_list.rs  mithril_stake_distribution_list_get_show_verify.rs  snapshot.rs  snapshot_list_get_show_download_verify.rs  stake_distribution.rs
mithril-common/: .gitignore  ADR.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  default.profraw
mithril-core/: .gitignore  Cargo.toml  Comparison.md  Dockerfile  Makefile  README.md  build.rs
mithril-doc-derive/: Cargo.toml
mithril-fake-aggregator/: Cargo.toml
mithril-persistence/: Cargo.toml  README.md
mithril-relay/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  mithril-relay-command-line.md
mithril-signer/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.ci  Makefile  README.md  mithril-signer-command-line.md
mithril-stm/: .gitignore  CHANGELOG.md  CODEC.md  Cargo.toml  Makefile  README.md  build.rs
poc-utxo-reader/: .gitignore  Cargo.toml  README.md
poc-wasm-client/: Cargo.toml  LICENSE_MIT  package-lock.json
rust/: Cargo.toml  Dockerfile  README.md  build.rs
rust-node/: Cargo.toml
rust/src/: lib.rs  (+11 more)
(+19412 files in other folders)
