[workspace]

resolver = "2"

members = [
    "demo/protocol-demo",
    "examples/client-cardano-database",
    "examples/client-cardano-database-v2",
    "examples/client-cardano-stake-distribution",
    "examples/client-cardano-transaction",
    "examples/client-mithril-stake-distribution",
    "internal/cardano-node/mithril-cardano-node-chain",
    "internal/cardano-node/mithril-cardano-node-internal-database",
    "internal/mithril-aggregator-client",
    "internal/mithril-aggregator-discovery",
    "internal/mithril-build-script",
    "internal/mithril-cli-helper",
    "internal/mithril-dmq",
    "internal/mithril-doc",
    "internal/mithril-doc-derive",
    "internal/mithril-era",
    "internal/mithril-metric",
    "internal/mithril-persistence",
    "internal/mithril-protocol-config",
    "internal/mithril-resource-pool",
    "internal/mithril-ticker",
    "internal/signed-entity/mithril-signed-entity-lock",
    "internal/signed-entity/mithril-signed-entity-preloader",
    "internal/tests/mithril-api-spec",
    "internal/tests/mithril-test-http-server",
    "mithril-aggregator",
    "mithril-client",
    "mithril-client-cli",
    "mithril-client-wasm",
    "mithril-common",
    "mithril-relay",
    "mithril-signer",
    "mithril-stm",
    "mithril-test-lab/mithril-aggregator-fake",
    "mithril-test-lab/mithril-end-to-end",
]

[workspace.package]
authors = ["dev@iohk.io", "mithril-dev@iohk.io"]
documentation = "https://mithril.network/doc"
edition = "2024"
homepage = "https://mithril.network"
license = "Apache-2.0"
repository = "https://github.com/input-output-hk/mithril/"

[workspace.dependencies]
anyhow = "1.0.101"
async-recursion = "1.1.1"
async-trait = "0.1.89"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive", "env"] }
config = "0.15.19"
digest = { version = "0.10.7", features = ["alloc"] }
hex = "0.4.3"
mockall = "0.14.0"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
rayon = "1.11.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
slog = "2.8.2"
slog-async = "2.8.0"
slog-bunyan = "2.5.0"
slog-term = "2.9.2"
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["rt", "sync", "time"] }
tracing = "0.1.44"
warp = { version = "0.4.2", features = ["server", "websocket"] }

[profile.ci-tests]
inherits = "dev"
# Minimize the amount of debug info generated, this disables profiling (not needed in ci) but keeps backtraces with filename/line number info
debug = "line-tables-only"
# Not cached by `Swatinem/rust-cache`, so generating them is a waste of resources
incremental = false
