[package]
name = "mithril-aggregator"
version = "0.8.12"
description = "A Mithril Aggregator server"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[features]
default = ["jemallocator"]

bundle_tls = ["reqwest/native-tls-vendored"]
jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
blockfrost = "1.2.1"
chrono = { workspace = true }
clap = { workspace = true, features = ["cargo"] }
config = { workspace = true }
flate2 = "1.1.8"
gcloud-kms = { version = "1.4.0", features = ["auth"] }
gcloud-storage = { version = "1.2.0", features = ["auth"] }
hex = { workspace = true }
mithril-aggregator-client = { path = "../internal/mithril-aggregator-client" }
mithril-cardano-node-chain = { path = "../internal/cardano-node/mithril-cardano-node-chain" }
mithril-cardano-node-internal-database = { path = "../internal/cardano-node/mithril-cardano-node-internal-database" }
mithril-cli-helper = { path = "../internal/mithril-cli-helper" }
mithril-common = { path = "../mithril-common" }
mithril-dmq = { path = "../internal/mithril-dmq" }
mithril-doc = { path = "../internal/mithril-doc" }
mithril-era = { path = "../internal/mithril-era" }
mithril-metric = { path = "../internal/mithril-metric" }
mithril-persistence = { path = "../internal/mithril-persistence" }
mithril-protocol-config = { path = "../internal/mithril-protocol-config" }
mithril-resource-pool = { path = "../internal/mithril-resource-pool" }
mithril-signed-entity-lock = { path = "../internal/signed-entity/mithril-signed-entity-lock" }
mithril-signed-entity-preloader = { path = "../internal/signed-entity/mithril-signed-entity-preloader" }
mithril-ticker = { path = "../internal/mithril-ticker" }
paste = "1.0.15"
percent-encoding = "2.3.2"
rayon = { workspace = true }
regex = "1.12.2"
reqwest = { workspace = true, features = [
    "default",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
sqlite = { version = "0.37.0", features = ["bundled"] }
tar = "0.4.44"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
uuid = { version = "1.19.0", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
warp = { workspace = true }
zstd = { version = "0.13.3", features = ["zstdmt"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6.1", optional = true }

[dev-dependencies]
axum = { version = "0.8.8", features = ["json"] }
axum-test = "18.6.0"
criterion = { version = "0.8.1", features = ["html_reports", "async_tokio"] }
http = "1.4.0"
httpmock = "0.8.2"
mithril-api-spec = { path = "../internal/tests/mithril-api-spec" }
mithril-common = { path = "../mithril-common", features = ["allow_skip_signer_certification"] }
mithril-test-http-server = { path = "../internal/tests/mithril-test-http-server" }
mockall = { workspace = true }
slog-scope = "4.4.0"
slog-term = { workspace = true }
tempfile = "3.24.0"
warp = { workspace = true, features = ["test"] }

[[bench]]
name = "cardano_transactions_import"
harness = false

[[bench]]
name = "cardano_transactions_get"
harness = false
