[package]
name = "mithril-client-cli"
version = "0.12.30"
description = "A Mithril Client"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.deb]
depends = "$auto"
section = "utility"
extended-description = """Shows, downloads and verifies certified blockchain artifacts.

Run `mithril-client --help` to display the available options."""
assets = [["../target/release/mithril-client", "usr/bin/", "755"]]

[[bin]]
name = "mithril-client"
path = "src/main.rs"

[features]
#default = ["bundle_tls"]
bundle_tls = ["mithril-client/native-tls-vendored"]

# Enables usage of `rug` numerical backend in `mithril-stm` (dependency of `mithril-client`).
rug-backend = ["mithril-client/rug-backend"]
# Enables usage of `num-integer` numerical backend in `mithril-stm` (dependency of `mithril-client`)
# by default it's `rug-backend`
num-integer-backend = ["mithril-client/num-integer-backend"]

# Support compressed traffic with `reqwest`
enable-http-compression = ["mithril-client/enable-http-compression"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cli-table = "0.5.0"
config = { workspace = true }
flate2 = "1.1.2"
fs2 = "0.4.3"
futures = "0.3.31"
human_bytes = { version = "0.4.3", features = ["fast"] }
indicatif = { version = "0.18.0", features = ["tokio"] }
mithril-cli-helper = { path = "../internal/mithril-cli-helper" }
mithril-client = { path = "../mithril-client", features = ["fs", "unstable"] }
mithril-doc = { path = "../internal/mithril-doc" }
reqwest = { workspace = true, features = [
    "default",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
slog-term = { workspace = true }
tar = "0.4.44"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zip = "4.6.1"

[dev-dependencies]
httpmock = "0.7.0"
mithril-common = { path = "../mithril-common" }
mockall = { workspace = true }
