[package]
name = "mithril-client-cli"
version = "0.12.40"
description = "A Mithril Client"
authors = { workspace = true }
edition = { workspace = true }
documentation = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[package.metadata.deb]
depends = "$auto"
section = "utility"
extended-description = """Shows, downloads and verifies certified blockchain artifacts.

Run `mithril-client --help` to display the available options."""
assets = [["../target/release/mithril-client", "usr/bin/", "755"]]

[[bin]]
name = "mithril-client"
path = "src/main.rs"

[features]
bundle_tls = ["mithril-client/native-tls-vendored"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
cli-table = "0.5.0"
config = { workspace = true }
flate2 = "1.1.8"
fs2 = "0.4.3"
futures = "0.3.31"
human_bytes = { version = "0.4.3", features = ["fast"] }
indicatif = { version = "0.18.3", features = ["tokio"] }
mithril-cli-helper = { path = "../internal/mithril-cli-helper" }
mithril-client = { path = "../mithril-client", features = ["fs", "unstable"] }
mithril-doc = { path = "../internal/mithril-doc" }
reqwest = { workspace = true, features = [
    "default",
    "gzip",
    "zstd",
    "deflate",
    "brotli"
] }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true, features = [
    "max_level_trace",
    "release_max_level_debug",
] }
slog-async = { workspace = true }
slog-bunyan = { workspace = true }
slog-term = { workspace = true }
tar = "0.4.44"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
zip = "6.0.0"

[dev-dependencies]
httpmock = "0.8.2"
mithril-common = { path = "../mithril-common" }
mockall = { workspace = true }
