[package]
name = "mithril-client-wasm"
version = "0.7.7"
description = "Mithril client WASM"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = ["cryptography"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.83"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
mithril-client = { path = "../mithril-client", features = ["unstable"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.134"
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
web-sys = { version = "0.3.76", features = ["BroadcastChannel", "console", "Storage", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script" }

[features]
# Include nothing by default
default = []
test-node = []

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
