[package]
name = "mithril-client-wasm"
version = "0.8.3"
description = "Mithril client WASM"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = ["cryptography"]

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
async-trait = "0.1.86"
chrono = { version = "0.4.39", features = ["serde"] }
futures = "0.3.31"
mithril-client = { path = "../mithril-client", default-features = false, features = ["unstable"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0.138"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["BroadcastChannel", "console", "Storage", "Window"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script" }

[features]
# Include nothing by default
default = []
test-node = []

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]
