[package]
name = "mithril-client-wasm"
version = "0.9.0"
description = "Mithril client WASM"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = ["cryptography"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.cargo-machete]
# wasm-bindgen-futures is required to build the project, but it's not used in the code
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
# Include nothing by default
default = []
test-node = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
mithril-client = { path = "../mithril-client", default-features = false, features = ["unstable"] }
serde = { workspace = true }
serde-wasm-bindgen = "0.6.5"
serde_json = { workspace = true }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["BroadcastChannel", "console", "Storage", "Window"] }

[build-dependencies]
mithril-build-script = { path = "../internal/mithril-build-script" }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
