[package]
name = "mithril-client"
version = "0.14.5"
description = "Mithril client library"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
categories = ["cryptography"]
include = ["**/*.rs", "Cargo.toml", "README.md", ".gitignore"]

[package.metadata.docs.rs]
all-features = true
# enable unstable features in the documentation
rustdoc-args = ["--cfg", "docsrs"]

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["num-integer-backend", "enable-http-compression"]

# Full feature set
full = ["fs"]

# Enable file system-related functionality for Cardano database downloads
fs = ["flate2", "flume", "tar", "tokio/rt", "zstd"]
unstable = []

# These features are for support of dependent crates only.
# They do not change the operation of the main crate.
native-tls = ["reqwest/native-tls"]
native-tls-no-alpn = ["reqwest/native-tls-no-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-vendored-no-alpn = ["reqwest/native-tls-vendored-no-alpn"]

rustls = ["reqwest/rustls"]
rustls-no-provider = ["reqwest/rustls-no-provider"]

# Support compressed traffic with `reqwest`
enable-http-compression = ["reqwest/gzip", "reqwest/zstd", "reqwest/deflate", "reqwest/brotli"]

# Empty feature: intentionally does NOT propagate to `mithril-common/future_snark` because
# `cargo publish --dry-run` resolves `mithril-common` from crates.io where `future_snark`
# does not exist yet. In CI, `--all-features` activates both this and `mithril-common`'s
# `future_snark` at the workspace level, so the gated client code compiles correctly.
# TODO: propagate to `mithril-common/future_snark` once the `future_snark` feature is published on crates.io.
future_snark = []

# Enables usage of `rug` numerical backend in `mithril-stm` (dependency of `mithril-common`).
rug-backend = ["mithril-common/rug-backend"]
# Enables usage of `num-integer` numerical backend in `mithril-stm` (dependency of `mithril-common`)
num-integer-backend = ["mithril-common/num-integer-backend"]

# DEPRECATED FEATURES: remove those features at next minor versions bump.
portable = []
native-tls-alpn = ["native-tls"]
rustls-tls = ["rustls"]
rustls-tls-manual-roots = ["rustls"]
rustls-tls-webpki-roots = ["rustls"]
rustls-tls-native-roots = ["rustls"]

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
flate2 = { version = "1.1.9", optional = true }
flume = { version = "0.12.0", optional = true }
futures = "0.3.32"
mithril-aggregator-client = { path = "../internal/mithril-aggregator-client", version = "0.1.10" }
mithril-common = { path = "../mithril-common", version = "0.6.68", default-features = false }
reqwest = { workspace = true, default-features = false, features = ["charset", "http2", "stream", "system-proxy"] }
serde = { workspace = true }
serde_json = { workspace = true }
slog = { workspace = true }
strum = { workspace = true }
tar = { version = "0.4.45", optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
uuid = { version = "1.23.1", features = ["v4"] }
zstd = { version = "0.13.3", optional = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mithril-aggregator-discovery = { path = "../internal/mithril-aggregator-discovery", version = "0.1" }
mithril-cardano-node-internal-database = { path = "../internal/cardano-node/mithril-cardano-node-internal-database", version = "0.1" }
rand = { version = "0.10.1" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.4.2", features = ["wasm_js"] }
uuid = { version = "1.23.1", features = ["v4", "js"] }

[dev-dependencies]
axum = { version = "0.8.9", features = ["json"] }
axum-test = "20.0.0"
bon = "3.9.1"
hex = { workspace = true }
http = "1.4.0"
httpmock = "0.8.3"
mockall = { workspace = true }
sha2 = "0.11.0"
slog-async = { workspace = true }
slog-term = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
tower-http = { version = "0.6.8", features = ["fs"] }

[[test]]
name = "cardano_transaction_proof"
path = "tests/cardano_transaction_proof.rs"

[[test]]
name = "cardano_transaction_v2_proof"
path = "tests/cardano_transaction_v2_proof.rs"
required-features = ["unstable"]

[[test]]
name = "cardano_block_proof"
path = "tests/cardano_block_proof.rs"
required-features = ["unstable"]

[[test]]
name = "cardano_db_snapshot_list_get_download_verify"
path = "tests/cardano_db_snapshot_list_get_download_verify.rs"
required-features = ["fs"]
